# oSsem2

./: .gitignore
lab4/: CMakeLists.txt  proc.c
lab4_part2/: CMakeLists.txt  Makefile  fort  fort.c  seq.c
lab5/: CMakeLists.txt  main.c  prog2.c  prog2_threads.c  prog3_threads.c  prog_3.c
lab6_Unix/: CMakeLists.txt  client.c  info.h  server.c
lab6_inet/: CMakeLists.txt  client.c  info.h  server.c
lab8/: Makefile  l.c
lab9/: CMakeLists.txt  Makefile  tasklet.c  work_queue.c
